<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
</resources>